# FlightTracker

./: Makefile  README.md  docker-compose.yml  pyproject.toml
dockerfiles/: Dockerfile
flightapi/: config.py  crud.py  database.py  db_config.py  db_seed.py  gunicorn_config.py  log_config.py  main.py  models.py
flightapi/alembic/: alembic.ini
flightapi/alembic/migration/: env.py
flightapi/alembic/migration/versions/: 916d7e959e7f_.py
flightapi/etc/: config.yml
flightapi/schemas/: airlines.py  airports.py  config.py  flights.py  passengers.py
flightapi/static/: redoc.standalone.js  swagger-ui-bundle.js
nginx/: nginx.conf
postgresql/scripts/: postgis_extensions.sql
