[tool.poetry]
name = "flight-api"
version = "1.0.0"
description = ""
authors = ["John Schlotter <jis5540@psu.edu>"]


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
pydantic = "^2.4.2"
pydantic-geojson = "^0.1.1"
uvicorn = "^0.23.2"
gunicorn = "^21.2.0"
SQLAlchemy = "^2.0.22"
pyaml = "^23.9.7"
Faker = "^19.10.0"
alembic = "^1.12.0"
toml = "^0.10.2"
SQLAlchemy-Utils = "^0.41.1"
pygeohash = "^1.2.0"
psycopg2-binary = "^2.9.9"
geojson-pydantic = "^1.0.1"
geoalchemy2 = "^0.13.3"
fastapi-sqlalchemy = "^0.2.1"
termcolor = "^2.4.0"
faker-airtravel = "^0.4"
passlib = "^1.7.4"


[tool.poetry.group.dev.dependencies]
coverage = "^7.3.2"
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
Flake8-pyproject = "^1.2.3"
flake8-bugbear = "^23.5.9"
mypy = "^1.3.0"
types-PyYAML = "^6.0.12.9"
httpx = "^0.25.0"
pytest-cov = "^4.0.0"
types-toml = "^0.10.8.6"
sqlalchemy = "^2.0.15"
colorama = "^0.4.3"
pytest-postgresql = "^5.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
